Version 2.2.1 (being developed)
===============================

* WCSLIB:

  * changed to version 4.19

* Module wcs:

  * added option to create a 'minimal' Projection object when a full
    object cannot be created due to errors in the FITS header.

* Module maputils:

  * various improvements and extensions.

* Module mplutil:

  * added sunbow color maps.

  * in class AxesCallback use weak references to Axes objects.

* Bug fixes.

Version 2.2 (Apr 19, 2012)
==========================

* Class maputils.FITSimage:

  * Method header2classic() returns a tuple with three elements.
    The last one used to be a boolean but it is now a list with
    FITS keywords that have been changed.

* Class rulers.Ruler:

  * now supports rulers specified by a start position, a size and an
    angle w.r.t. the North.

  * new method *set_title()* for labeling a ruler.

* Module mplutil:

  * new class CanvasCallback.

  * work-around to add support for resize events to matplotlib's
    Qt4Agg backend.

  * work-around for matplotlib's (>=1.1.0) changed callback registry. 

* WCSLIB:

  * changed to version 4.13.4

  * use WCSLIB's new error diagnostics system

* New module kmpfit:

  * provides new class Fitter for solving least-squares problem using
    the Levenberg-Marquardt technique. It is based on the implementation
    in C of Craig Markwardt's MPFIT routines.

* Documentation:

  * several improvements.

Version 2.1 (Feb 14, 2011)
==========================

* Class wcs.Projection:

  * added attribute *category*

  * fixed ZPN projection related problem in method *mixed()*

  * minimal FITS headers are now accepted

  * added support for *grid coordinates*, i.e., CRPIX-relative pixel
    coordinates. Methods *pixel2grid()* and *grid2pixel()*.

  * added method *str2pos()* for converting positions represented as strings
    to world- and pixel coordinates.

* Module maputils:

  * added new class *Skypolygon* for plotting shapes like ellipses,